--- a/WORKSPACE.bazel
+++ b/WORKSPACE.bazel
@@ -4,9 +4,9 @@ load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
 
 http_archive(
     name = "ecsact_runtime",
-    sha256 = "8f0b625ca50f530da3c94a3875cdb88a4ba80e50c1e452e48e31d409866a9461",
-    strip_prefix = "ecsact_runtime-b01ca22af5dd83b2a741449a5c22165fc95a49f6",
-    url = "https://github.com/ecsact-dev/ecsact_runtime/archive/b01ca22af5dd83b2a741449a5c22165fc95a49f6.zip",
+    sha256 = "c02c7400335f1e76b631c3aaa5ed6d9232e9290670bdacb6eac6166568ffe016",
+    strip_prefix = "ecsact_runtime-37d42e018055b8856bc2190a678b4408131d7172",
+    url = "https://github.com/ecsact-dev/ecsact_runtime/archive/37d42e018055b8856bc2190a678b4408131d7172.zip",
 )
 
 http_archive(
@@ -37,3 +37,26 @@ http_archive(
 load("@hedron_compile_commands//:workspace_setup.bzl", "hedron_compile_commands_setup")
 
 hedron_compile_commands_setup()
+
+http_archive(
+    name = "com_grail_bazel_toolchain",
+    sha256 = "f46dce68037252663da6f5e7c240d61e589d756c838c6dfb79a849635cffe9b5",
+    strip_prefix = "bazel-toolchain-2ef4bbf579fdc3afbca61f11bb955b8770c75867",
+    url = "https://github.com/grailbio/bazel-toolchain/archive/2ef4bbf579fdc3afbca61f11bb955b8770c75867.zip",
+)
+
+load("@com_grail_bazel_toolchain//toolchain:deps.bzl", "bazel_toolchain_dependencies")
+
+bazel_toolchain_dependencies()
+
+load("@com_grail_bazel_toolchain//toolchain:rules.bzl", "llvm_toolchain")
+
+llvm_toolchain(
+    name = "llvm_toolchain",
+    cxx_standard = {"linux": "c++20"},
+    llvm_version = "14.0.0",
+)
+
+load("@llvm_toolchain//:toolchains.bzl", "llvm_register_toolchains")
+
+llvm_register_toolchains()
