--- a/WORKSPACE.bazel
+++ b/WORKSPACE.bazel
@@ -1,4 +1,4 @@
-workspace(name = "ecsact_parse_runtime_interop")
+workspace(name = "ecsact_interpret")
 
 load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
 
