--- a/WORKSPACE.bazel
+++ b/WORKSPACE.bazel
@@ -3,6 +3,13 @@ workspace(name = "ecsact_interpret")
 load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
 
 http_archive(
+    name = "magic_enum",
+    sha256 = "6b948d1680f02542d651fc82154a9e136b341ce55c5bf300736b157e23f9df11",
+    strip_prefix = "magic_enum-0.8.1",
+    url = "https://github.com/Neargye/magic_enum/archive/refs/tags/v0.8.1.tar.gz",
+)
+
+http_archive(
     name = "ecsact_runtime",
     sha256 = "1858d427a8e9892005e17cf97035a464b1b1f2628d6c7d5a1fc7ea2037fe56a7",
     strip_prefix = "ecsact_runtime-7b64ae6ebd4c3e75b8c18e0437ee88233492dc93",
