--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -4,14 +4,19 @@ load("//bazel:copts.bzl", "copts")
 package(default_visibility = ["//visibility:public"])
 
 cc_library(
-    name = "ecsact_parse_runtime_interop",
-    srcs = [
-        "ecsact/detail/visit_statement.hh",
-        "ecsact/parse_runtime_interop.cc",
-    ],
-    hdrs = ["ecsact/parse_runtime_interop.h"],
+    name = "ecsact_interpret_detail",
+    visibility = ["//:__subpackages__"],
+    hdrs = glob(["ecsact/interpret/detail/*.hh"]),
+    deps = ["@magic_enum"],
+)
+
+cc_library(
+    name = "ecsact_interpret",
+    srcs = glob(["ecsact/interpret/**/*.cc"]),
+    hdrs = glob(["ecsact/interpret/*.h", "ecsact/interpret/*.hh"]),
     copts = copts,
     deps = [
+        ":ecsact_interpret_detail",
         "//parse-resolver-runtime",
         "@ecsact_parse",
     ],
