--- a/test/BUILD.bazel
+++ b/test/BUILD.bazel
@@ -1,5 +1,16 @@
-load("@rules_cc//cc:defs.bzl", "cc_test")
+load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
 load("//bazel:copts.bzl", "copts")
+
+cc_library(
+    name = "test_lib",
+    hdrs = ["test_lib.hh"],
+    visibility = ["//test:__subpackages__"],
+    deps = [
+        "//:ecsact_interpret",
+        "@bazel_sundry//bazel_sundry:runfiles",
+        "@com_google_googletest//:gtest",
+    ],
+)
 
 cc_test(
     name = "test",
