--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,6 +14,18 @@
 			"preLaunchTask": "build //test:test",
 		},
 		{
+			"name": "test //test/errors:no_capabilities",
+			"request": "launch",
+			"program": "${workspaceRoot}/bazel-bin/test/errors/no_capabilities",
+			"cwd": "${workspaceFolder}",
+			"type": "lldb",
+			"windows": {
+				"type": "cppvsdbg",
+				"program": "${workspaceRoot}/bazel-bin/test/errors/no_capabilities.exe"
+			},
+			"preLaunchTask": "build //test/errors:no_capabilities",
+		},
+		{
 			"name": "run //cli:ecsact_interpreter",
 			"request": "launch",
 			"program": "${workspaceRoot}/bazel-bin/cli/ecsact_interpreter",
