--- a/test/BUILD.bazel
+++ b/test/BUILD.bazel
@@ -24,3 +24,17 @@ cc_test(
         "@com_google_googletest//:gtest_main",
     ],
 )
+
+cc_test(
+    name = "comment_before_package",
+    srcs = ["comment_before_package.cc"],
+    copts = copts,
+    data = ["comment_before_package.ecsact"],
+    deps = [
+        ":test_lib",
+        "//:ecsact_interpret",
+        "@bazel_sundry//bazel_sundry:runfiles",
+        "@com_google_googletest//:gtest",
+        "@com_google_googletest//:gtest_main",
+    ],
+)
