--- a/test/errors/BUILD.bazel
+++ b/test/errors/BUILD.bazel
@@ -1,14 +1,19 @@
 load("@rules_cc//cc:defs.bzl", "cc_test")
 load("//bazel:copts.bzl", "copts")
 
-cc_test(
-    name = "no_capabilities",
-    srcs = ["no_capabilities.cc"],
+_TESTS = [
+    "no_capabilities",
+    "no_package_statement_first",
+]
+
+[cc_test(
+    name = test,
+    srcs = ["{}.cc".format(test)],
     copts = copts,
-    data = ["no_capabilities.ecsact"],
+    data = ["{}.ecsact".format(test)],
     deps = [
         "//test:test_lib",
         "@com_google_googletest//:gtest",
         "@com_google_googletest//:gtest_main",
     ],
-)
+) for test in _TESTS]
