--- a/test/BUILD.bazel
+++ b/test/BUILD.bazel
@@ -38,3 +38,22 @@ cc_test(
         "@com_google_googletest//:gtest_main",
     ],
 )
+
+cc_test(
+    name = "multi_pkg",
+    srcs = ["multi_pkg.cc"],
+    copts = copts,
+    data = [
+        "multi_pkg_a.ecsact",
+        "multi_pkg_b.ecsact",
+        "multi_pkg_c.ecsact",
+        "multi_pkg_main.ecsact",
+    ],
+    deps = [
+        ":test_lib",
+        "//:ecsact_interpret",
+        "@bazel_sundry//bazel_sundry:runfiles",
+        "@com_google_googletest//:gtest",
+        "@com_google_googletest//:gtest_main",
+    ],
+)
