--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
 # bazel
-/bazel-*
-/user.bazelrc
+bazel-*/
+user.bazelrc
 
-# https://github.com/hedronvision/bazel-compile-commands-extractor
-/compile_commands.json
-/external
-
-# clangd
-/.cache/
+# editor stuff
+compile_commands.json
+external/
+.cache/
+.helix/
