--- a/test/errors/BUILD.bazel
+++ b/test/errors/BUILD.bazel
@@ -1,5 +1,5 @@
 load("@rules_cc//cc:defs.bzl", "cc_test")
-load("//bazel:copts.bzl", "copts")
+load("@ecsact_interpret//bazel:copts.bzl", "copts")
 
 _TESTS = [
     "no_capabilities",
@@ -14,8 +14,9 @@ _TESTS = [
     data = ["{}.ecsact".format(test)],
     args = ["--gtest_catch_exceptions=0"],
     deps = [
-        "//test:test_lib",
-        "@com_google_googletest//:gtest",
-        "@com_google_googletest//:gtest_main",
+        "//:test_lib",
+        "@ecsact_interpret",
+        "@googletest//:gtest",
+        "@googletest//:gtest_main",
     ],
 ) for test in _TESTS]
