--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -9,3 +9,16 @@ bazel_dep(name = "bazel_skylib", version = "1.4.2")
 bazel_dep(name = "magic_enum", version = "0.9.3")
 bazel_dep(name = "ecsact_runtime", version = "0.5.1")
 bazel_dep(name = "ecsact_parse", version = "0.3.0")
+
+git_override(
+    module_name = "ecsact_parse",
+    commit = "4ade8b03b049bc72ffd080658e20fa95625d62ce",
+    remote = "https://github.com/ecsact-dev/ecsact_parse",
+)
+
+# TODO: https://github.com/ecsact-dev/ecsact_runtime/pull/202
+git_override(
+    module_name = "ecsact_runtime",
+    commit = "4898df11566551ee48c9bf31d3c4471a12795091",
+    remote = "https://github.com/ecsact-dev/ecsact_runtime",
+)
