--- a/test/errors/BUILD.bazel
+++ b/test/errors/BUILD.bazel
@@ -2,6 +2,7 @@ load("@rules_cc//cc:defs.bzl", "cc_test")
 load("@ecsact_interpret//bazel:copts.bzl", "copts")
 
 _TESTS = [
+    "invalid_notify_settings",
     "no_capabilities",
     "no_package_statement_first",
     "unknown_association_field",
