chore: remove git overrides

--- a/test/MODULE.bazel
+++ b/test/MODULE.bazel
@@ -3,6 +3,9 @@ module(name = "ecsact_interpret_test")
 bazel_dep(name = "rules_cc", version = "0.0.8")
 bazel_dep(name = "bazel_skylib", version = "1.4.2")
 bazel_dep(name = "googletest", version = "1.14.0")
+bazel_dep(name = "ecsact_parse", version = "0.3.3")
+bazel_dep(name = "ecsact_runtime", version = "0.5.2")
+
 bazel_dep(name = "bazel_sundry")
 bazel_dep(name = "ecsact_interpret")
 
@@ -10,19 +13,6 @@ git_override(
     module_name = "bazel_sundry",
     commit = "a999751b4992fab12a06f1bede2414708c6db540",
     remote = "https://github.com/seaube/bazel_sundry",
-)
-
-git_override(
-    module_name = "ecsact_parse",
-    commit = "4ade8b03b049bc72ffd080658e20fa95625d62ce",
-    remote = "https://github.com/ecsact-dev/ecsact_parse",
-)
-
-# TODO: https://github.com/ecsact-dev/ecsact_runtime/pull/202
-git_override(
-    module_name = "ecsact_runtime",
-    commit = "9067827b8bce245dd64220310c6a8080ad3481b0",
-    remote = "https://github.com/ecsact-dev/ecsact_runtime",
 )
 
 local_path_override(
