--- a/test/errors/BUILD.bazel
+++ b/test/errors/BUILD.bazel
@@ -24,3 +24,20 @@ _TESTS = [
         "@googletest//:gtest_main",
     ],
 ) for test in _TESTS]
+
+cc_test(
+    name = "ambiguous_field_type",
+    srcs = ["ambiguous_field_type.cc"],
+    copts = copts,
+    data = [
+        "ambiguous_field_type.ecsact",
+        "ambiguous_field_type_import.ecsact",
+    ],
+    args = ["--gtest_catch_exceptions=0"],
+    deps = [
+        "//:test_lib",
+        "@ecsact_interpret",
+        "@googletest//:gtest",
+        "@googletest//:gtest_main",
+    ],
+)
