feat: implement new assoc api (#224)

--- a/parse-resolver-runtime/BUILD.bazel
+++ b/parse-resolver-runtime/BUILD.bazel
@@ -5,7 +5,7 @@ package(default_visibility = ["//:__subpackages__"])
 
 cc_library(
     name = "parse-resolver-runtime",
-    srcs = ["parse-resolver-runtime.cc"],
+    srcs = glob(["*.cc", "*.hh"]),
     copts = copts,
     defines = [
         "ECSACT_DYNAMIC_API=\"\"",
