fix: add missing out capabilities count assignment
* also added more assoc tests

--- a/test/BUILD.bazel
+++ b/test/BUILD.bazel
@@ -60,6 +60,22 @@ cc_test(
 )
 
 cc_test(
+    name = "assoc_capabilities",
+    srcs = ["assoc_capabilities.cc"],
+    copts = copts,
+    data = [
+        "assoc_capabilities.ecsact",
+    ],
+    deps = [
+        ":test_lib",
+        "@ecsact_interpret",
+        "@bazel_sundry//bazel_sundry:runfiles",
+        "@googletest//:gtest",
+        "@googletest//:gtest_main",
+    ],
+)
+
+cc_test(
     name = "field_indexing",
     srcs = ["field_indexing.cc"],
     copts = copts,
