feat: new component type apis

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -26,3 +26,8 @@ register_toolchains(
     "@llvm_toolchain//:all",
     dev_dependency = True,
 )
+
+local_path_override(
+    module_name = "ecsact_runtime",
+    path = "../ecsact_runtime",
+)
