--- a/.editorconfig
+++ b/.editorconfig
@@ -3,6 +3,7 @@ root = true
 [*]
 end_of_line = lf
 insert_final_newline = true
+indent_size = 4
 
 [*.{cc,hh,cpp,hpp}]
 # matching .clang-format IndentWidth
