--- a/test/BUILD.bazel
+++ b/test/BUILD.bazel
@@ -90,3 +90,19 @@ cc_test(
         "@googletest//:gtest_main",
     ],
 )
+
+cc_test(
+    name = "stream_component",
+    srcs = ["stream_component.cc"],
+    copts = copts,
+    data = [
+        "stream_component.ecsact",
+    ],
+    deps = [
+        ":test_lib",
+        "@ecsact_interpret",
+        "@bazel_sundry//bazel_sundry:runfiles",
+        "@googletest//:gtest",
+        "@googletest//:gtest_main",
+    ],
+)
