--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -7,7 +7,7 @@ module(
 bazel_dep(name = "rules_cc", version = "0.0.9")
 bazel_dep(name = "bazel_skylib", version = "1.5.0")
 bazel_dep(name = "magic_enum", version = "0.9.3")
-bazel_dep(name = "ecsact_runtime", version = "0.7.1")
+bazel_dep(name = "ecsact_runtime", version = "0.7.1", max_compatibility_level = 8)
 bazel_dep(name = "ecsact_parse", version = "0.5.4")
 
 bazel_dep(name = "toolchains_llvm", version = "1.0.0", dev_dependency = True)
